2011-06-28  Alexis Menard  <alexis.menard@openbossa.org>

        Reviewed by Andreas Kling.

        [Qt] Use QtQuick imports in Api tests rather than old deprecated Qt 4.x imports.
        https://bugs.webkit.org/show_bug.cgi?id=63533

        We need to use the new QtQuick 1.x imports rather than the old deprecated
        version.

        * tests/qdeclarativewebview/resources/webviewbackgroundcolor.qml:
        * tests/qdeclarativewebview/resources/webviewtest.qml:
        * tests/qdeclarativewebview/resources/webviewtestdefault.qml:

2011-06-27  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        Reviewed by Andreas Kling.

        [Qt] tst_QWebFrame::overloadedSlots() fails
        https://bugs.webkit.org/show_bug.cgi?id=37319

        * tests/qwebframe/tst_qwebframe.cpp:
        (tst_QWebFrame::overloadedSlots): Remove expected failure and
        fix the comment.

2011-06-27  Alexis Menard  <alexis.menard@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Remove Phonon MediaPlayer from the tree.
        https://bugs.webkit.org/show_bug.cgi?id=63448

        Remove Phonon related stuff.

        * docs/qtwebkit.qdocconf:
        * qt_webkit_version.pri:

2011-06-23  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Andreas Kling.

        [Qt] Fix tst_QWebFrame::setHtmlWithResource() API test
        https://bugs.webkit.org/show_bug.cgi?id=63235

        [Qt] Fix tst_QWebFrame::renderGeometry() API test
        https://bugs.webkit.org/show_bug.cgi?id=63236

        [Qt] Fix tst_QWebFrame::setUrlWithPendingLoads() API test
        https://bugs.webkit.org/show_bug.cgi?id=63237

        * tests/qwebframe/tst_qwebframe.cpp: Mark failing test cases as expected fails until real fix.
        (tst_QWebFrame::setHtmlWithResource):
        (tst_QWebFrame::renderGeometry):

2011-06-23  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Andreas Kling.
