@@ -2,6 +2,18 @@
 
         Reviewed by Andreas Kling.
 
+        [Qt] Use <QtX/x.h> style of headers for Qt tests which rely on it.
+        https://bugs.webkit.org/show_bug.cgi?id=63562
+
+        Some Qt auto-tests rely on <QtX/x.h> types of includes.
+
+        * Api/qwebkitplatformplugin.h:
+        * symbian/platformplugin/qwebkitplatformplugin.h:
+
+2011-06-28  Alexis Menard  <alexis.menard@openbossa.org>
+
+        Reviewed by Andreas Kling.
+
         [Qt] Use QtQuick imports in Api tests rather than old deprecated Qt 4.x imports.
         https://bugs.webkit.org/show_bug.cgi?id=63533
 
